--- a/services/web/app/views/project/editor/editor.pug
+++ b/services/web/app/views/project/editor/editor.pug
@@ -21,7 +21,7 @@ div.full-size(
 	.ui-layout-resizer-controls.synctex-controls(
 		ng-show="settings.pdfViewer !== 'native'"
 	)
-		pdf-synctex-controls()
+//		pdf-synctex-controls()
 
 div.full-size(
 	ng-if="ui.pdfLayout == 'flat'"
