--- a/services/web/app/views/user/register.pug
+++ b/services/web/app/views/user/register.pug
@@ -25,8 +25,8 @@ block content
 						.page-header
 							h1 #{translate("register")}
 						p
-							| Please contact
+							| Please visit
 							|
-							strong(ng-non-bindable) #{settings.adminEmail}
+							<a href="https://panacea-writer.com/">Panacea-Writer.com</a>
 							|
-							| to create an account.
+							| to register and create an account.
