--- a/services/web/frontend/stylesheets/app/editor.less
+++ b/services/web/frontend/stylesheets/app/editor.less
@@ -34,7 +34,8 @@
 .editor-menu-icon {
   &.fa {
     width: 1em;
-    background: @editor-header-logo-background;
+    // don't show overleaf logo
+    // background: @editor-header-logo-background;
 
     &::before {
       // Disable the font-awesome icon when in Overleaf by replacing it with a
