--- a/services/web/frontend/stylesheets/core/variables.less
+++ b/services/web/frontend/stylesheets/core/variables.less
@@ -19,9 +19,9 @@
 @ol-blue-gray-5: #2c3645;
 @ol-blue-gray-6: #1e2530;
 
-@ol-green: #138a07;
-@ol-type-green: #107206;
-@ol-dark-green: #004a0e;
+@ol-green: #f4a261;
+@ol-type-green: #e76f51;
+@ol-dark-green: #e76f51;
 @ol-blue: #3e70bb;
 @ol-dark-blue: #2857a1;
 @ol-red: #c9453e;
@@ -77,12 +77,12 @@
 //== Typography
 //
 //## Font, line-height, and color for body text, headings, and more.
-@font-family-sans-serif: 'Lato', sans-serif;
-@font-family-serif: 'Merriweather', serif;
+@font-family-sans-serif: 'Alegreya Sans', sans-serif;
+@font-family-serif: 'Piazzolla', serif;
 
 //** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
-@font-family-monospace: Menlo, Monaco, Consolas, 'Courier New', monospace;
-@font-family-base: @font-family-sans-serif;
+@font-family-monospace: 'Fira Code', Menlo, Monaco, Consolas, 'Courier New', monospace;
+@font-family-base: @font-family-serif;
 
 @font-size-base: 16px;
 @font-size-large: ceil((@font-size-base * 1.25)); // ~20px
