--- a/services/web/frontend/stylesheets/style.less
+++ b/services/web/frontend/stylesheets/style.less
@@ -2,6 +2,9 @@
 @import (less) '../fonts/merriweather.css';
 @import (less) '../fonts/source-code-pro.css';
 @import (less) '../fonts/stix-two-math.css';
+@import (less) '../fonts/fira_code.css';
+@import (less) '../fonts/alegreya_sans.css';
+@import (less) '../fonts/piazzolla.css';
 
 @is-overleaf-light: false;
 @show-rich-text: true;
